--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Wish Mart</title>
+  <title>Shopping Mart</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Bootstrap-CSS-Style-Link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@
 
 <body>
   <header></header>
-  <h1 class="text-center mb-5 text-primary">Welcome To <span class="text-center mb-3 text-warning"> Wish Mart</span>
+  <h1 class="text-center mb-5 text-primary">Welcome To <span class="text-center mb-3 text-warning"> Shopping Mart</span>
   </h1>
   <main class="main m-5">
     <div class="input-group mx-auto mt-5 mb-5 w-50">
