--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <header></header>
-  <h1 class="text-center mb-5 text-primary">Welcome To <span class="text-center mb-3 text-warning"> Shopping Mart</span>
+  <h1 class="text-center mt-2 mb-5 text-secondary">Welcome To <span class="text-center mb-3 text-warning"> Shopping Mart</span>
   </h1>
   <main class="main m-5">
     <div class="input-group mx-auto mt-5 mb-5 w-50">
@@ -64,6 +64,9 @@
           <!-- <h1></h1> -->
         </div>
       </div>
+
+      <!-- Buying-Total-Info-Cart -->
+
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
         <div class="cart" id="my-cart">
           <table class="table">
