--- a/index.html
+++ b/index.html
@@ -5,23 +5,33 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Shopping Mart</title>
+
   <link rel="stylesheet" href="./css/style.css" />
+
   <!-- Bootstrap-CSS-Style-Link -->
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
   <!-- google Montserrat  font  -->
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+
   <!-- Font_Awesome-Icon-Link -->
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+    
 </head>
 
 <body>
   <header></header>
-  <h1 class="text-center mt-2 mb-5 text-secondary">Welcome To <span class="text-center mb-3 text-warning"> Shopping Mart</span>
+  <h1 class="text-center mt-2 mb-5 text-secondary">Welcome To <span class="text-center mb-3 text-warning"> Shopping
+      Mart</span>
   </h1>
   <main class="main m-5">
     <div class="input-group mx-auto mt-5 mb-5 w-50">
@@ -116,6 +126,7 @@
     crossorigin="anonymous"></script>
 
   <!-- add javascript  file  -->
+
   <script src="./js/app.js"></script>
 </body>
 
